// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled components renders the <BadgeWrapper /> styles based on the {theme} prop values 1`] = `
.c0 {
  position: absolute;
  top: -0.5rem;
  right: -0.5rem;
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  font-size: 0.65rem;
  text-transform: uppercase;
  color: #ffffff;
  background-color: #0ea7b5;
}

<span
  className="badge c0"
>
  test
</span>
`;

exports[`Styled components renders the <BaseLink /> styles based on the {theme} prop values 1`] = `
.c0 {
  color: #0ea7b5;
  border: 2px solid #0ea7b5;
  background-color: #ffffff;
  padding: 0.6rem 1rem;
  font-size: 0.85rem;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  color: #0c457d;
  border-color: #0c457d;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c0:disabled:hover,
.c0:disabled:focus {
  color: #505050;
  border-color: #505050;
}

<a
  className="c0"
  href="/test"
  onClick={[Function]}
/>
`;

exports[`Styled components renders the <BreadcrumbLink /> styles based on the {theme} prop values 1`] = `
.c0 {
  font-size: 0.85rem;
}

.c0.active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  aria-current={null}
  className="c0"
  href="/test"
  onClick={[Function]}
/>
`;

exports[`Styled components renders the <Button /> styles based on the {theme} prop values 1`] = `
.c0 {
  color: #0ea7b5;
  border: 2px solid #0ea7b5;
  background-color: #ffffff;
  padding: 0.6rem 1rem;
  font-size: 0.85rem;
  cursor: pointer;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  color: #0c457d;
  border-color: #0c457d;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c0:disabled:hover,
.c0:disabled:focus {
  color: #505050;
  border-color: #505050;
}

.c0.modal__close {
  position: absolute;
  right: 0;
  top: 0;
  border: 0;
}

<button
  className="c0"
/>
`;

exports[`Styled components renders the <ContainerWrapper /> styles based on the {theme} prop values 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 1200px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`Styled components renders the <FooterWrapper /> styles based on the {theme} prop values 1`] = `
.c0 {
  margin-top: 32px;
  background-color: #6bd2db;
  box-shadow: 0 0 16px rgba(0,0,0,0.3);
}

.c0 .footer__copy {
  color: #ffffff;
}

<footer
  className="c0"
/>
`;

exports[`Styled components renders the <GlobalStyles /> styles based on the {theme} prop values 1`] = `null`;

exports[`Styled components renders the <HeaderWrapper /> styles based on the {theme} prop values 1`] = `
.c0 {
  background: #ffffff;
  padding: 20px;
  box-shadow: 0 0 16px rgba(0,0,0,0.3);
}

<header
  className="c0"
/>
`;

exports[`Styled components renders the <Input /> styles based on the {theme} prop values 1`] = `
.c0 {
  font-size: 1rem;
  border: 2px solid #e0e0e0;
  padding: 0.6rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<input
  className="c0"
/>
`;

exports[`Styled components renders the <NavigationLink /> styles based on the {theme} prop values 1`] = `
.c0 {
  color: #0ea7b5;
}

.c0.active {
  border-bottom: 2px solid #ffbe4f;
}

<a
  aria-current={null}
  className="c0"
  href="/test"
  onClick={[Function]}
/>
`;

exports[`Styled components renders the <UtilitiesStyles /> styles based on the {theme} prop values 1`] = `null`;
